	* apps/nshlib/nsh_usbdev.c:  User now has to press ENTER 3 times before
	  USB console will start.  Otherwise, the USB console starts before there
	  is anyone at the other end to listen.
	* apps/nshlib/nsh_usbdev.c and nsh_consolemain.c:  Add support for the USB
	  capability when a USB console is used.
	* apps/nshlib/nsh_fscmds.c:  Add the 'mv' command

6.20 2012-07-12 Gregory Nutt <gnutt@nuttx.org>

	* namedapp/exec_namedapp.c - Correct an error when round robin scheduling
	  is enabled.  The priority of the new, named application was erroneously
	  being set to the priority of the parent thread; losing its configured
	  priority.  Reported by Mike Smith.

6.21 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/include/: Stylistic clean-up of all header files.
	* apps/modbus and apps/include/modbus:  A port of freemodbus-v1.5.0
	  has been added to the NuttX apps/ source tree.
	* apps/examples/modbus:  A port of the freemodbus-v1.5.0 "demo"
	  program that will be used to verify the FreeModBus port
	* apps/modbus:  Don't use strerror().  It is just too big.
	* apps/modbus:  Add CONFIG_MB_TERMIOS.  If the driver doesn't support
	  termios ioctls, then don't bother trying to configure the baud, parity
	  etc.
	* apps/nslib:  If waitpid() is supported, then NSH not catches the
	  return value from spawned applications (provided by Mike Smith)
	* apps/nslib:  Lock the schedule while starting built-in applications
	  in order to eliminate race conditions (also from Mike Smith).
	* apps/examples/adc, pwm, and qencoder:  Add support for testing
	  devices with multiple ADC, PWM, and QE devices.
	* apps/nshlib/nsh_mntcmds.c:  Separated mount-related commands out of
	  nsh_fscmds.c.  Extended to the mount command so that if no arguments
	  are provided, then the current mountpoints are enumerated.
	* apps/nshlib/nsh_mntcmds.c:  Add an NSH df command to list the
	  properties of mounted file systems.